[Header] Fix logo size and fix logo color change on mobile

--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -320,10 +320,9 @@ body {
         transition: opacity $slideAnimationDuration;
     }
     .large-logo {
-        height: 100%;
+        height: 60px;
         opacity: 0;
         transition: opacity $slideAnimationDuration;
-        height: 100%;
         position: absolute;
         // right: 56px;
         transform: translateX(-50%);
